--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
   <h1 class="Name" style="font-family: Raleway"> ABHIJIT DEB NATH </h1>
   <h4 class="Profession" style="font-family: Raleway"> VISUAL ARTIST </h4>
-  <div> <a class="Active" href="index.html">Home</a> <a href="Text.html">Text</a> <a href="Contact.html">Contact</a> <a href="CV.html">CV</a></div>
+  <div> <a class="Active" href="index.html">Home</a> <a href="Process.html">Text</a> <a href="Contact.html">Contact</a> <a href="CV.html">CV</a></div>
 </header>
 <nav class="arrows">
   <p id="left-arrow"><b>&lt;</b></p>
