--- a/Process.html
+++ b/Process.html
@@ -13,7 +13,7 @@
 <header>
   <h1 class = "Name" style = "font-family: Raleway"> ABHIJIT DEB NATH </h1>
   <h4 class = "Profession" style = "font-family: Raleway" > VISUAL ARTIST </h4>
-  <div> <a href="index.html">Home</a> <a class = "Active" href="Text.html">Text</a> <a href="Contact.html">Contact</a> <a href="CV.html">CV</a> </div>
+  <div> <a href="index.html">Home</a> <a class = "Active" href="Process.html">Text</a> <a href="Contact.html">Contact</a> <a href="CV.html">CV</a> </div>
 </header>
 <p style = "font-family: Raleway" align="center" class="title"> <b>A Cognitive Process</b><br/>
   <br/>
