--- a/CV.html
+++ b/CV.html
@@ -12,7 +12,7 @@
 <header>
   <h1 class = "Name" style = "font-family: Raleway"> ABHIJIT DEB NATH </h1>
   <h4 class = "Profession" style = "font-family: Raleway" > VISUAL ARTIST </h4>
-  <div> <a href="index.html">Home</a> <a href="Process.html">Text</a> <a href="Contact.html">Contact</a> <a class = "Active" href="CV.html">CV</a> </div>
+  <div> <a href="index.html">Home</a> <a href="Process.html">Process</a> <a href="Contact.html">Contact</a> <a class = "Active" href="CV.html">CV</a> </div>
 </header>
 <p style = "font-family: Raleway" align="center" class="cv"> <b>Abhijit deb nath</b> <br/>
   Date of Birth: 11.05.1987 <br/>
