--- a/CV.html
+++ b/CV.html
@@ -18,22 +18,22 @@
   Date of Birth: 11.05.1987 <br/>
   <br/>
   <br/>
-  <b>Educational Qualification:</b><br/>
+  <b>Educational Qualification :</b><br/>
   2011-13- M.F.A (Painting) Visva Bharati University, Santiniketan, WestBengal<br/>
   2007-11- B.F.A (Painting) Visva Bharati Univrsity, Santiniketan, West Bengal<br/>
   <br/>
   <br/>
-  <b>Exhibition Participant:</b><br/>
+  <b>Exhibition Participant :</b><br/>
   2019- Participating in Museum of Goa ( Affordable art fest) (14th december to feb 14th 2020)<br/>
   2015- Annual Art Exhibition AIFACS New Delhi<br/>
   2014- Birla gallery Annual exhibition Kolkata West Bengal<br/>
   2012- Vice-Versa Workshop in Goa<br/>
   2010- Group Exhibition in Santiniketan Nandan Art Gallery Kolkata West Bengal<br/>
-  2008-10- Kalabhavan Visva-Bharati Annual Art exhibition in Indian Academy of<br/>
+  2008-10- Kalabhavan Visva-Bharati Annual Art exhibition in Indian Academy of
   Fine art Kolkata West Bengal India<br/>
   <br/>
   <br/>
-  <b>Workshop participated as an Artist:</b><br/>
+  <b>Workshop participated as an Artist :</b><br/>
   2018- Meet the Artist conducted by Bangalore Art foundation ( Artist Mr.S.G. Vasudev and Chief guest Art curator Mr. Sadanand Menon) Bangalore<br/>
   2012- Vice-Versa Workshop in Goa<br/>
   2011- Painting Workshop in Hyderabad<br/>
@@ -44,8 +44,10 @@
   <br/>
   <b>Award :</b><br/>
   2012- Vice-Versa award in Goa<br/>
+  <br/>
   Present Address: #57 Balaji layout, Bagalur road Sathanur village, opp country club
   Bangalore-562149<br/>
-</p>
+  <br/>
+  P.s : All the information given above are self attested and genuine </p>
 </body>
 </html>
